--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,34 @@
-/build
+
+
+touch .gitignore
+
+git config --global user.name Ashutosh-bhardwaj879
+
+git config --global user.email ashutoshbhardwaj879@gmail.com
+git init
+
+git add .
+
+
+git commit -m "Initial Commit"
+
+git status # JUST TO SEE
+
+ ---Go to setting in github
+-----ssh and gpa keys
+----- generate ssh key
+
+ssh-keygen -t rsa -b 4096 -C "ashutoshbhardwaj879@gmail.com"
+
+cat <path to .pub>
+
+Add it to your github account
+
+git remote add origin <ssh url.git>
+
+git push origin master
+
+#CHANGE MAIN TO MASTER
+
+git checkout -b master
+
